--- a/package.xml
+++ b/package.xml
@@ -6,18 +6,24 @@
   <description>Autonomous drone navigation system using PX4 and ROS2</description>
   <maintainer email="patrickk@uia.no">Patrick Karlsen</maintainer>
   <license>MIT</license>
+
   <buildtool_depend>ament_python</buildtool_depend>
-  
+
   <!-- ROS2 Dependencies -->
   <depend>rclpy</depend>
   <depend>px4_msgs</depend>
   <depend>rosidl_runtime_py</depend>
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
   
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
 </package>
+
+    
